// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bank detects patterns 1`] = `
<div
  data-testid="route/bank"
>
  <p>
    Access a bank statement, press Ctrl+A, press Ctrl+C, then return here and click in the box below, press Ctrl+V.
  </p>
  <form
    class=""
  >
    <div
      class="mb-3"
    >
      <label
        class="form-label"
      >
        Bank statement
      </label>
      <textarea
        class="form-control"
        data-testid="inputBank statement"
        rows="5"
      >
        
22/33/4444 dd 8.8 * 1,109,999.99
22/33/4444 dd 7.7 * 999.99
11/22/3333 aa 4 bb 5.5 cc 6.66 7.77

      </textarea>
    </div>
  </form>
  <div-page
    data-testid="tableStatements"
  >
    <div
      class="table-responsive"
    >
      <table
        class="table table-striped table-bordered table-hover"
      >
        <thead>
          <tr>
            <th>
              Client
            </th>
            <th>
              Date
            </th>
            <th>
              Desc
            </th>
            <th>
              In/Out
            </th>
            <th>
              Balance
            </th>
            <th>
              Match
            </th>
            <th>
              Pattern
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <column-text>
                clientA
              </column-text>
            </td>
            <td>
              <column-text>
                22/33/4444
              </column-text>
            </td>
            <td>
              <column-text>
                dd
              </column-text>
            </td>
            <td>
              <column-text>
                8.80
              </column-text>
            </td>
            <td>
              <column-text>
                1109999.99
              </column-text>
            </td>
            <td>
              <column-text>
                C001
              </column-text>
            </td>
            <td>
              <column-text>
                dd
              </column-text>
            </td>
            <td>
              <button
                class="btn btn-primary"
                data-testid="buttonEdit146"
                type="button"
              >
                Edit
              </button>
              <button
                class="btn btn-primary"
                data-testid="buttonDel146"
                type="button"
              >
                Del
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <column-text>
                clientA
              </column-text>
            </td>
            <td>
              <column-text>
                22/33/4444
              </column-text>
            </td>
            <td>
              <column-text>
                dd
              </column-text>
            </td>
            <td>
              <column-text>
                7.70
              </column-text>
            </td>
            <td>
              <column-text>
                999.99
              </column-text>
            </td>
            <td>
              <column-text>
                C001
              </column-text>
            </td>
            <td>
              <column-text>
                dd
              </column-text>
            </td>
            <td>
              <button
                class="btn btn-primary"
                data-testid="buttonEdit147"
                type="button"
              >
                Edit
              </button>
              <button
                class="btn btn-primary"
                data-testid="buttonDel147"
                type="button"
              >
                Del
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <column-text>
                -
              </column-text>
            </td>
            <td>
              <column-text>
                11/22/3333
              </column-text>
            </td>
            <td>
              <column-text>
                aa 4 bb 5.5 cc
              </column-text>
            </td>
            <td>
              <column-text>
                6.66
              </column-text>
            </td>
            <td>
              <column-text>
                7.77
              </column-text>
            </td>
            <td>
              <column-text />
            </td>
            <td>
              <column-text>
                aa * bb *.* cc
              </column-text>
            </td>
            <td>
              <button
                class="btn btn-primary"
                data-testid="buttonEdit148"
                type="button"
              >
                Edit
              </button>
              <button
                class="btn btn-primary"
                data-testid="buttonDel148"
                type="button"
              >
                Del
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <button
      class="btn btn-primary"
      data-testid="buttonAdd"
      type="button"
    >
      Add
    </button>
    <button
      class="btn btn-primary"
      data-testid="buttonClear"
      type="button"
    >
      Clear
    </button>
  </div-page>
  <button
    class="btn btn-primary"
    data-testid="buttonAddAll"
    type="button"
  >
    Add All to Receipts
  </button>
  <p
    class="mt-3"
  >
    Any rows with blank Client will be deleted. Discarded rows are added to ignore patterns.
  </p>
  <p>
    Any rows already in Receipts (with same Client, Date and In/Out) are duplicates. They will not be added again.
  </p>
  <form
    class=""
  >
    <div
      class="mb-3"
    >
      <label
        class="form-label"
      >
        Ignore patterns
      </label>
      <textarea
        class="form-control"
        data-testid="inputIgnore patterns"
        rows="5"
      />
    </div>
  </form>
</div>
`;

exports[`Bank detects patterns 2`] = `
<div
  data-testid="route/bank"
>
  <div
    class="fade alert alert-success show"
    role="alert"
  >
    2 added. 0 duplicated. 1 discarded.
  </div>
  <p>
    Access a bank statement, press Ctrl+A, press Ctrl+C, then return here and click in the box below, press Ctrl+V.
  </p>
  <form
    class=""
  >
    <div
      class="mb-3"
    >
      <label
        class="form-label"
      >
        Bank statement
      </label>
      <textarea
        class="form-control"
        data-testid="inputBank statement"
        rows="5"
      />
    </div>
  </form>
  <div-page
    data-testid="tableStatements"
  >
    <div
      class="table-responsive"
    >
      <table
        class="table table-striped table-bordered table-hover"
      >
        <thead>
          <tr>
            <th>
              Client
            </th>
            <th>
              Date
            </th>
            <th>
              Desc
            </th>
            <th>
              In/Out
            </th>
            <th>
              Balance
            </th>
            <th>
              Match
            </th>
            <th>
              Pattern
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
    <button
      class="btn btn-primary"
      data-testid="buttonAdd"
      type="button"
    >
      Add
    </button>
    <button
      class="btn btn-primary"
      data-testid="buttonClear"
      type="button"
    >
      Clear
    </button>
  </div-page>
  <button
    class="btn btn-primary"
    data-testid="buttonAddAll"
    type="button"
  >
    Add All to Receipts
  </button>
  <p
    class="mt-3"
  >
    Any rows with blank Client will be deleted. Discarded rows are added to ignore patterns.
  </p>
  <p>
    Any rows already in Receipts (with same Client, Date and In/Out) are duplicates. They will not be added again.
  </p>
  <form
    class=""
  >
    <div
      class="mb-3"
    >
      <label
        class="form-label"
      >
        Ignore patterns
      </label>
      <textarea
        class="form-control"
        data-testid="inputIgnore patterns"
        rows="5"
      >
        aa * bb *.* cc
      </textarea>
    </div>
  </form>
</div>
`;

exports[`Bank detects patterns 3`] = `
<div
  data-testid="route/receipts"
>
  <div-page
    data-testid="tableReceipts"
  >
    <div
      class="table-responsive"
    >
      <table
        class="table table-striped table-bordered table-hover"
      >
        <thead>
          <tr>
            <th>
              Ref
            </th>
            <th>
              Date
            </th>
            <th>
              Client
            </th>
            <th>
              Total
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <column-text>
                R001
              </column-text>
            </td>
            <td>
              <column-text>
                22/33/4444
              </column-text>
            </td>
            <td>
              <column-text>
                clientB
              </column-text>
            </td>
            <td>
              <column-text>
                8.80
              </column-text>
            </td>
            <td>
              <button
                class="btn btn-primary"
                data-testid="buttonEdit149"
                type="button"
              >
                Edit
              </button>
              <button
                class="btn btn-primary"
                data-testid="buttonDel149"
                type="button"
              >
                Del
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <column-text>
                R001
              </column-text>
            </td>
            <td>
              <column-text>
                22/33/4444
              </column-text>
            </td>
            <td>
              <column-text>
                clientA
              </column-text>
            </td>
            <td>
              <column-text>
                7.70
              </column-text>
            </td>
            <td>
              <button
                class="btn btn-primary"
                data-testid="buttonEdit150"
                type="button"
              >
                Edit
              </button>
              <button
                class="btn btn-primary"
                data-testid="buttonDel150"
                type="button"
              >
                Del
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <button
      class="btn btn-primary"
      data-testid="buttonAdd"
      type="button"
    >
      Add
    </button>
    <button
      class="btn btn-primary"
      data-testid="buttonClear"
      type="button"
    >
      Clear
    </button>
  </div-page>
</div>
`;

exports[`Bank detects patterns 4`] = `
<div
  data-testid="route/clients"
>
  <div-page
    data-testid="tableClients"
  >
    <div
      class="table-responsive"
    >
      <table
        class="table table-striped table-bordered table-hover"
      >
        <thead>
          <tr>
            <th>
              Ref
            </th>
            <th>
              Name
            </th>
            <th>
              Phone
            </th>
            <th>
              Patterns
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <column-text>
                C001
              </column-text>
            </td>
            <td>
              <column-text>
                clientA
              </column-text>
            </td>
            <td>
              <column-text>
                555
              </column-text>
            </td>
            <td>
              <column-text>
                dd
              </column-text>
            </td>
            <td>
              <button
                class="btn btn-primary"
                data-testid="buttonEdit11"
                type="button"
              >
                Edit
              </button>
              <button
                class="btn btn-primary"
                data-testid="buttonDel11"
                type="button"
              >
                Del
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <column-text>
                C002
              </column-text>
            </td>
            <td>
              <column-text>
                clientB
              </column-text>
            </td>
            <td>
              <column-text>
                555
              </column-text>
            </td>
            <td>
              <column-text>
                
dd
              </column-text>
            </td>
            <td>
              <button
                class="btn btn-primary"
                data-testid="buttonEdit12"
                type="button"
              >
                Edit
              </button>
              <button
                class="btn btn-primary"
                data-testid="buttonDel12"
                type="button"
              >
                Del
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <button
      class="btn btn-primary"
      data-testid="buttonAdd"
      type="button"
    >
      Add
    </button>
    <button
      class="btn btn-primary"
      data-testid="buttonClear"
      type="button"
    >
      Clear
    </button>
  </div-page>
</div>
`;

exports[`Bank renders page 1`] = `
<div-page
  data-testid="tableStatements"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ClientRef
          </th>
          <th>
            BalanceDue
          </th>
          <th>
            Send
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
</div-page>
`;
